frontend/tour-operation-react/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tour-operation-react-svc
  namespace: uat
spec:
  selector:
    app: tour-operation-react
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
