frontend/tour-operation-react/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: uat-redirect@kubernetescrd
  labels:
    app: tour-operation-react-http-redirect
  name: tour-operation-react-http-redirect
  namespace: uat
spec:
  rules:
    - host: tour-uat.tripota.com.vn
      http:
        paths:
          - backend:
              service:
                name: tour-operation-react-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: uat

spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: tour-operation-react
  name: tour-operation-react
  namespace: uat
spec:
  rules:
  - host: tour-uat.tripota.com.vn
    http:
      paths:
      - backend:
          service:
            name: tour-operation-react-svc
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - tour-uat.tripota.com.vn
    secretName: tour-operation-react-tls
